# nelkut

./: .coveragerc  .gitignore  AppLibrary.py  LICENSE  README.md  app.py  asiakaspalaveri1.txt  bibtex_creator.py  database.py  db.py  fly.toml  init_test.py  product_backlog.md  pyproject.toml  reference_list.py  refservice.py  requirements.txt  reset_test_db.bash  retro.md  routes.py  schema.sql  test.bash  test_schema.sql  test_util.py  users.py
.github/workflows/: main.yml
robot_tests/: home.robot  resource.robot
templates/: add_article_reference.html  add_book_reference.html  add_inproceeding_reference.html  add_inproceedings_reference.html  add_reference.html  error.html  index.html  list_references.html  login.html  register.html
tests/: home.robot  reference_list_test.py  refservice_test.py  resource.robot  test_schema.sql  users_test.py
